feat: fix line length

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "import pandas as pd\n",
     "import yaml\n",
-    "from tdc.single_pred import ADME"
+    "from tdc.single_pred import ADMEgi"
    ]
   },
   {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -841,7 +841,9 @@
    "source": [
     "meta = {\n",
     "    \"name\": \"caco2_wang\",  # unique identifier, we will also use this for directory names\n",
-    "    \"description\": \"The human colon epithelial cancer cell line, Caco-2, is used as an in vitro model to simulate the human intestinal tissue. The experimental result on the rate of drug passing through the Caco-2 cells can approximate the rate at which the drug permeates through the human intestinal tissue.\",\n",
+    "    \"description\": \"\"\"The human colon epithelial cancer cell line, Caco-2, is used as an in vitro model\n",
+    "    to simulate the human intestinal tissue. The experimental result on the rate of drug passing through\n",
+    "    the Caco-2 cells can approximate the rate at which the drug permeates through the human intestinal tissue.\"\"\",\n",
     "    \"targets\": [\n",
     "        {\n",
     "            \"id\": \"permeability\",  # name of the column in a tabular dataset\n",
@@ -881,8 +883,10 @@
     "    \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{wang2016adme,\n",
-    "title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability using a combination of NSGA-II and boosting},\n",
-    "author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng and Wen, Ming and Yao, Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao, Dong-Sheng},\n",
+    "title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability\n",
+    "using a combination of NSGA-II and boosting},\n",
+    "author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng and Wen, Ming and Yao,\n",
+    "Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao, Dong-Sheng},\n",
     "journal={Journal of Chemical Information and Modeling},\n",
     "volume={56},\n",
     "number={4},\n",
@@ -896,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -908,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -933,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -944,10 +948,10 @@
      "output_type": "stream",
      "text": [
       "name: caco2_wang\n",
-      "description: The human colon epithelial cancer cell line, Caco-2, is used as an in\n",
-      "  vitro model to simulate the human intestinal tissue. The experimental result on\n",
-      "  the rate of drug passing through the Caco-2 cells can approximate the rate at which\n",
-      "  the drug permeates through the human intestinal tissue.\n",
+      "description: \"The human colon epithelial cancer cell line, Caco-2, is used as an in\\\n",
+      "  \\ vitro model\\n    to simulate the human intestinal tissue. The experimental result\\\n",
+      "  \\ on the rate of drug passing through\\n    the Caco-2 cells can approximate the\\\n",
+      "  \\ rate at which the drug permeates through the human intestinal tissue.\"\n",
       "targets:\n",
       "- id: permeability\n",
       "  description: Caco-2 cell effective permeability.\n",
@@ -963,8 +967,11 @@
       "  type: SMILES\n",
       "  description: SMILES\n",
       "- id: compound_id\n",
-      "  type: OTHER\n",
+      "  type: Other\n",
       "  description: Compound id / name\n",
+      "  names:\n",
+      "  - compound id\n",
+      "  - compound name\n",
       "license: CC BY 4.0\n",
       "links:\n",
       "- https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\n",
@@ -972,14 +979,30 @@
       "num_points: 910\n",
       "url: https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\n",
       "bibtex:\n",
-      "- \"@article{wang2016adme,\\n            title={ADME properties evaluation in drug discovery:\\\n",
-      "  \\ prediction of Caco-2 cell permeability using a combination of NSGA-II and boosting},\\n\\\n",
-      "  \\            author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng\\\n",
-      "  \\ and Wen, Ming and Yao, Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao,\\\n",
-      "  \\ Dong-Sheng},\\n            journal={Journal of Chemical Information and Modeling},\\n\\\n",
-      "  \\            volume={56},\\n            number={4},\\n            pages={763--773},\\n\\\n",
-      "  \\            year={2016},\\n            publisher={ACS Publications}\\n          \\\n",
-      "  \\  }\"\n"
+      "- '@article{wang2016adme,\n",
+      "\n",
+      "  title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability\n",
+      "\n",
+      "  using a combination of NSGA-II and boosting},\n",
+      "\n",
+      "  author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng and Wen,\n",
+      "  Ming and Yao,\n",
+      "\n",
+      "  Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao, Dong-Sheng},\n",
+      "\n",
+      "  journal={Journal of Chemical Information and Modeling},\n",
+      "\n",
+      "  volume={56},\n",
+      "\n",
+      "  number={4},\n",
+      "\n",
+      "  pages={763--773},\n",
+      "\n",
+      "  year={2016},\n",
+      "\n",
+      "  publisher={ACS Publications}\n",
+      "\n",
+      "  }'\n"
      ]
     }
    ],
@@ -1009,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1072,7 +1095,9 @@
     "    # create meta yaml\n",
     "    meta = {\n",
     "        \"name\": \"caco2_wang\",  # unique identifier, we will also use this for directory names\n",
-    "        \"description\": \"The human colon epithelial cancer cell line, Caco-2, is used as an in vitro model to simulate the human intestinal tissue. The experimental result on the rate of drug passing through the Caco-2 cells can approximate the rate at which the drug permeates through the human intestinal tissue.\",\n",
+    "        \"description\": \"\"\"The human colon epithelial cancer cell line, Caco-2, is used as an in vitro model\n",
+    "        to simulate the human intestinal tissue. The experimental result on the rate of drug passing through\n",
+    "        the Caco-2 cells can approximate the rate at which the drug permeates through the human intestinal tissue.\"\"\",\n",
     "        \"targets\": [\n",
     "            {\n",
     "                \"id\": \"permeability\",  # name of the column in a tabular dataset\n",
@@ -1112,8 +1137,10 @@
     "        \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@article{wang2016adme,\n",
-    "            title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability using a combination of NSGA-II and boosting},\n",
-    "            author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng and Wen, Ming and Yao, Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao, Dong-Sheng},\n",
+    "            title={ADME properties evaluation in drug discovery: prediction of Caco-2 cell permeability\n",
+    "            using a combination of NSGA-II and boosting},\n",
+    "            author={Wang, Ning-Ning and Dong, Jie and Deng, Yin-Hua and Zhu, Min-Feng and Wen, Ming and Yao,\n",
+    "            Zhi-Jiang and Lu, Ai-Ping and Wang, Jian-Bing and Cao, Dong-Sheng},\n",
     "            journal={Journal of Chemical Information and Modeling},\n",
     "            volume={56},\n",
     "            number={4},\n",
