feat: added url description

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -776,12 +776,30 @@
     "    ],\n",
     "    \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "        \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "        \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
-    "        \"https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html\",\n",
-    "        \"https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\",\n",
-    "        \"https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\",\n",
-    "        \"https://creativecommons.org/licenses/by-sa/3.0/\",\n",
+    "        {\n",
+    "            \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
+    "            \"description\": \"original dataset\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
+    "            \"description\": \"original meta data\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html#lipo-datasets\",\n",
+    "            \"description\": \"original dataset link from moleculenet\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\",\n",
+    "            \"description\": \"original report card\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\",\n",
+    "            \"description\": \"original dataset license from chembl\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"url\": \"https://creativecommons.org/licenses/by-sa/3.0/\",\n",
+    "            \"description\": \"used dataset license\",\n",
+    "        },\n",
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
@@ -797,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -809,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 95,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -834,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -862,16 +880,22 @@
       "  description: SMILES\n",
       "license: CC BY-SA 3.0\n",
       "links:\n",
-      "- https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
-      "- https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\n",
-      "- https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html\n",
-      "- https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\n",
-      "- https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\n",
-      "- https://creativecommons.org/licenses/by-sa/3.0/\n",
+      "- url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
+      "  description: original dataset\n",
+      "- url: https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\n",
+      "  description: original meta data\n",
+      "- url: https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html#lipo-datasets\n",
+      "  description: original dataset link from moleculenet\n",
+      "- url: https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\n",
+      "  description: original report card\n",
+      "- url: https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\n",
+      "  description: original dataset license from chembl\n",
+      "- url: https://creativecommons.org/licenses/by-sa/3.0/\n",
+      "  description: used dataset license\n",
       "num_points: 4200\n",
       "url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
       "bibtex:\n",
-      "- \"@techreport{hersey2015chembl,\\n        title={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
+      "- \"@techreport{hersey2015chembl,\\n        title={ChEMBL Deposited Data Set-AZ dataset},\\n\\\n",
       "  \\        author={Hersey, Anne},\\n        year={2015},\\n        institution={Technical\\\n",
       "  \\ Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n"
      ]
@@ -903,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 97,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -980,12 +1004,30 @@
     "        ],\n",
     "        \"license\": \"CC BY-SA 3.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "            \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "            \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
-    "            \"https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html\",\n",
-    "            \"https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\",\n",
-    "            \"https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\",\n",
-    "            \"https://creativecommons.org/licenses/by-sa/3.0/\",\n",
+    "            {\n",
+    "                \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
+    "                \"description\": \"original dataset\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://github.com/cheminfo/molecule-features/blob/main/data/lipophilicity/meta.yaml\",\n",
+    "                \"description\": \"original meta data\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://deepchem.readthedocs.io/en/latest/api_reference/moleculenet.html#lipo-datasets\",\n",
+    "                \"description\": \"original dataset link from moleculenet\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://www.ebi.ac.uk/chembl/document_report_card/CHEMBL3301361/\",\n",
+    "                \"description\": \"original report card\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://chembl.gitbook.io/chembl-interface-documentation/about#data-licensing\",\n",
+    "                \"description\": \"original dataset license from chembl\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"url\": \"https://creativecommons.org/licenses/by-sa/3.0/\",\n",
+    "                \"description\": \"used dataset license\",\n",
+    "            },\n",
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
@@ -1010,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
