feat: removed typo

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "import pandas as pd\n",
     "import yaml\n",
-    "from tdc.single_pred import ADMEgi"
+    "from tdc.single_pred import ADME"
    ]
   },
   {
