feat: fix black lint

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -936,23 +936,17 @@
    "source": [
     "def str_presenter(dumper, data):\n",
     "    \"\"\"configures yaml for dumping multiline strings\n",
-    "    Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\"\"\"\n",
-    "    if data.count('\\n') > 0:  # check for multiline string\n",
+    "    Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "    \"\"\"\n",
+    "    if data.count(\"\\n\") > 0:  # check for multiline string\n",
     "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
-    "    return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "1d25c000-6c80-4a46-91da-3a15f9f5d8a9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
+    "\n",
     "yaml.add_representer(str, str_presenter)\n",
-    "yaml.representer.SafeRepresenter.add_representer(str, str_presenter) # to use with safe_dum"
+    "yaml.representer.SafeRepresenter.add_representer(\n",
+    "    str, str_presenter\n",
+    ")  # to use with safe_dum"
    ]
   },
   {
@@ -1076,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1088,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1212,14 +1206,18 @@
     "            }\"\"\",\n",
     "        ],\n",
     "    }\n",
+    "\n",
     "    def str_presenter(dumper, data):\n",
     "        \"\"\"configures yaml for dumping multiline strings\n",
     "        Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\"\"\"\n",
-    "        if data.count('\\n') > 0:  # check for multiline string\n",
+    "        if data.count(\"\\n\") > 0:  # check for multiline string\n",
     "            return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
     "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
+    "\n",
     "    yaml.add_representer(str, str_presenter)\n",
-    "    yaml.representer.SafeRepresenter.add_representer(str, str_presenter) # to use with safe_dum\n",
+    "    yaml.representer.SafeRepresenter.add_representer(\n",
+    "        str, str_presenter\n",
+    "    )  # to use with safe_dum\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
     "        yaml.dump(meta, f, sort_keys=False)\n",
