feat: address review

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b39a142e-ccbc-49d2-98b0-a5f9bde9fd27",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "26d9f62a-07f5-4113-8161-d5dfcf0bfb71",
    "metadata": {
     "tags": []
@@ -102,26 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 648\n",
-      "drwxr-xr-x@ 3 MMP  staff    96B 28 Feb 14:56 \u001b[34mdata\u001b[m\u001b[m/\n",
-      "-rw-r--r--  1 MMP  staff    77K 28 Feb 12:36 data_clean.csv\n",
-      "-rw-r--r--  1 MMP  staff    77K 28 Feb 16:26 data_original.csv\n",
-      "-rw-r--r--  1 MMP  staff    37K 28 Feb 16:25 example_processing_and_templates.ipynb\n",
-      "-rw-r--r--  1 MMP  staff   1,9K 28 Feb 16:25 meta.yaml\n",
-      "-rw-r--r--  1 MMP  staff   4,3K 28 Feb 16:25 transform.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh"
    ]
@@ -136,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "77f614e7-b133-40bc-8759-2d930e4c120e",
    "metadata": {
     "tags": []
@@ -160,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "8f5a0387-f9e3-4e1a-8d14-5df618195f70",
    "metadata": {
     "tags": []
@@ -172,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "55b0bd63-62a0-469e-9d8a-e9ada3fe01c4",
    "metadata": {
     "tags": []
@@ -255,7 +241,7 @@
        "4  C#C[C@]1(O)CC[C@H]2[C@@H]3CCC4=Cc5oncc5C[C@]4(... -4.840000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ec2458e5-455f-4f03-8ce9-c0d12e9ed371",
    "metadata": {
     "tags": []
@@ -287,7 +273,7 @@
        "['Drug_ID', 'Drug', 'Y']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "a46dd8ff-37b3-4894-8226-3bf98226dd09",
    "metadata": {
     "tags": []
@@ -307,7 +293,7 @@
    "outputs": [],
    "source": [
     "fields_clean = [\n",
-    "    \"compound_id\",\n",
+    "    \"compound_name\",\n",
     "    \"SMILES\",\n",
     "    \"permeability\",\n",
     "]"
@@ -315,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "785d37cb-1fb4-4a91-a923-d5a78a37f36a",
    "metadata": {
     "tags": []
@@ -327,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "1bf212cb-1653-457b-9f5d-416d4dd14b53",
    "metadata": {
     "tags": []
@@ -354,7 +340,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>compound_id</th>\n",
+       "      <th>compound_name</th>\n",
        "      <th>SMILES</th>\n",
        "      <th>permeability</th>\n",
        "    </tr>\n",
@@ -395,7 +381,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         compound_id  \\\n",
+       "                                       compound_name  \\\n",
        "0                                    (-)-epicatechin   \n",
        "1  (2E,4Z,8Z)-N-isobutyldodeca-2,4,10-triene-8 -y...   \n",
        "2                                            codeine   \n",
@@ -410,7 +396,7 @@
        "4  C#C[C@]1(O)CC[C@H]2[C@@H]3CCC4=Cc5oncc5C[C@]4(...     -4.840000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,21 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "7e746003-cb1f-434f-bba6-00f0c439c4ac",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df.compound_id = (\n",
-    "    df.compound_id.str.strip()\n",
+    "df.compound_name = (\n",
+    "    df.compound_name.str.strip()\n",
     ")  # remove leading and trailing white space characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "d544fa60-343e-40e1-bd0c-4750f07a7145",
    "metadata": {
     "tags": []
@@ -463,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "d6d5efa5-b4b4-4a25-8626-e10f3d691e83",
    "metadata": {
     "tags": []
@@ -475,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "727f8d7b-cbb6-43c7-9eab-9d4d65be6b3f",
    "metadata": {
     "tags": []
@@ -487,27 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 MMP  staff    77K 28 Feb 16:26 data_clean.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh {fn_data_csv}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "a51b9001-25d7-4e0e-a607-477cfc4a9f1c",
    "metadata": {
     "tags": []
@@ -517,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "compound_id,SMILES,permeability\n",
+      "compound_name,SMILES,permeability\n",
       "(-)-epicatechin,Oc1cc(O)c2c(c1)OC(c1ccc(O)c(O)c1)C(O)C2,-6.2199998\n",
       "\"(2E,4Z,8Z)-N-isobutyldodeca-2,4,10-triene-8 -ynamide\",C/C=C\\C#CCC/C=C\\C=C\\C(=O)NCC(C)C,-3.8599999\n",
       "codeine,COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2)N(C)CC[C@]314,-4.0900002\n",
@@ -531,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "1a512943-4909-4d56-867d-50c151d8d607",
    "metadata": {
     "tags": []
@@ -558,7 +536,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>compound_id</th>\n",
+       "      <th>compound_name</th>\n",
        "      <th>SMILES</th>\n",
        "      <th>permeability</th>\n",
        "    </tr>\n",
@@ -599,7 +577,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         compound_id  \\\n",
+       "                                       compound_name  \\\n",
        "0                                    (-)-epicatechin   \n",
        "1  (2E,4Z,8Z)-N-isobutyldodeca-2,4,10-triene-8 -y...   \n",
        "2                                            codeine   \n",
@@ -614,7 +592,7 @@
        "4  C#C[C@]1(O)CC[C@H]2[C@@H]3CCC4=Cc5oncc5C[C@]4(...     -4.840000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "077b0c5f-8772-4879-9317-3fa28799689b",
    "metadata": {
     "tags": []
@@ -645,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "6eaef0e6-2115-4793-ac43-a196b25d47a0",
    "metadata": {
     "tags": []
@@ -657,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "43619e7c-9c82-4ff0-ae25-403861304635",
    "metadata": {
     "tags": []
@@ -684,7 +662,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>compound_id</th>\n",
+       "      <th>compound_name</th>\n",
        "      <th>SMILES</th>\n",
        "      <th>permeability</th>\n",
        "    </tr>\n",
@@ -725,7 +703,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         compound_id  \\\n",
+       "                                       compound_name  \\\n",
        "0                                    (-)-epicatechin   \n",
        "1  (2E,4Z,8Z)-N-isobutyldodeca-2,4,10-triene-8 -y...   \n",
        "2                                            codeine   \n",
@@ -740,7 +718,7 @@
        "4  C#C[C@]1(O)CC[C@H]2[C@@H]3CCC4=Cc5oncc5C[C@]4(...     -4.840000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "49771077-471d-4d71-a9a7-d6b094bbc4f3",
    "metadata": {
     "tags": []
@@ -786,7 +764,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>compound_id</th>\n",
+       "      <th>compound_name</th>\n",
        "      <th>SMILES</th>\n",
        "      <th>permeability</th>\n",
        "    </tr>\n",
@@ -827,7 +805,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         compound_id  \\\n",
+       "                                       compound_name  \\\n",
        "0                                    (-)-epicatechin   \n",
        "1  (2E,4Z,8Z)-N-isobutyldodeca-2,4,10-triene-8 -y...   \n",
        "2                                            codeine   \n",
@@ -842,7 +820,7 @@
        "4  C#C[C@]1(O)CC[C@H]2[C@@H]3CCC4=Cc5oncc5C[C@]4(...     -4.840000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -886,21 +864,17 @@
     "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "        },\n",
     "        {\n",
-    "            \"id\": \"compound_id\",\n",
+    "            \"id\": \"compound_name\",\n",
     "            \"type\": \"Other\",\n",
-    "            \"description\": \"Compound id / name\",\n",
+    "            \"description\": \"compound name\",\n",
     "            \"names\": [\n",
-    "                \"compound id\",\n",
+    "                \"compound\",\n",
     "                \"compound name\",\n",
     "            ],\n",
     "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "        {\n",
-    "            \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
-    "            \"description\": \"tdcommons.ai dataset url\",\n",
-    "        },\n",
     "        {\n",
     "            \"url\": \"https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642\",\n",
     "            \"description\": \"corresponding publication\",\n",
@@ -927,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "ec455cf0-962a-4c0d-bb3e-066e415ffd9b",
    "metadata": {
     "tags": []
@@ -951,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -963,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -976,27 +950,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 MMP  staff   1,6K 28 Feb 16:27 meta.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh {fn_meta}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -1025,16 +991,14 @@
       "- id: SMILES\n",
       "  type: SMILES\n",
       "  description: SMILES\n",
-      "- id: compound_id\n",
+      "- id: compound_name\n",
       "  type: Other\n",
-      "  description: Compound id / name\n",
+      "  description: compound name\n",
       "  names:\n",
-      "  - compound id\n",
+      "  - compound\n",
       "  - compound name\n",
       "license: CC BY 4.0\n",
       "links:\n",
-      "- url: https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\n",
-      "  description: tdcommons.ai dataset url\n",
       "- url: https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642\n",
       "  description: corresponding publication\n",
       "num_points: 910\n",
@@ -1070,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1082,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1125,15 +1089,15 @@
     "\n",
     "    # overwrite column names = fields\n",
     "    fields_clean = [\n",
-    "        \"compound_id\",\n",
+    "        \"compound_name\",\n",
     "        \"SMILES\",\n",
     "        \"permeability\",\n",
     "    ]\n",
     "    df.columns = fields_clean\n",
     "\n",
     "    # data cleaning\n",
-    "    df.compound_id = (\n",
-    "        df.compound_id.str.strip()\n",
+    "    df.compound_name = (\n",
+    "        df.compound_name.str.strip()\n",
     "    )  # remove leading and trailing white space characters\n",
     "\n",
     "    assert not df.duplicated().sum()\n",
@@ -1169,21 +1133,17 @@
     "                \"description\": \"SMILES\",  # description (optional, except for \"OTHER\")\n",
     "            },\n",
     "            {\n",
-    "                \"id\": \"compound_id\",\n",
+    "                \"id\": \"compound_name\",\n",
     "                \"type\": \"Other\",\n",
-    "                \"description\": \"Compound id / name\",\n",
+    "                \"description\": \"compound name\",\n",
     "                \"names\": [\n",
-    "                    \"compound id\",\n",
+    "                    \"compound\",\n",
     "                    \"compound name\",\n",
     "                ],\n",
     "            },\n",
     "        ],\n",
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
-    "            {\n",
-    "                \"url\": \"https://tdcommons.ai/single_pred_tasks/adme/#caco-2-cell-effective-permeability-wang-et-al\",\n",
-    "                \"description\": \"tdcommons.ai dataset url\",\n",
-    "            },\n",
     "            {\n",
     "                \"url\": \"https://pubs.acs.org/doi/10.1021/acs.jcim.5b00642\",\n",
     "                \"description\": \"corresponding publication\",\n",
@@ -1209,7 +1169,8 @@
     "\n",
     "    def str_presenter(dumper, data):\n",
     "        \"\"\"configures yaml for dumping multiline strings\n",
-    "        Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\"\"\"\n",
+    "        Ref: https://stackoverflow.com/questions/8640959/how-can-i-control-what-scalar-form-pyyaml-uses-for-my-data\n",
+    "        \"\"\"\n",
     "        if data.count(\"\\n\") > 0:  # check for multiline string\n",
     "            return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data, style=\"|\")\n",
     "        return dumper.represent_scalar(\"tag:yaml.org,2002:str\", data)\n",
